<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AuthViewController" customModule="GBShop" customModuleProvider="target">
            <connections>
                <outlet property="activityIndicator" destination="sKy-LJ-zCf" id="Lin-kj-rsx"/>
                <outlet property="loginButton" destination="D2z-MU-TQx" id="MTz-tr-JWr"/>
                <outlet property="loginField" destination="UzS-Wq-sfg" id="AVj-i1-eHk"/>
                <outlet property="passwordField" destination="zzG-wK-UrB" id="mSL-yv-Kpm"/>
                <outlet property="scrollView" destination="x0h-61-CIq" id="ciT-kn-OvJ"/>
                <outlet property="signUpButton" destination="ejr-UO-V1H" id="onf-7X-jtG"/>
                <outlet property="stackView" destination="4jU-kr-oFd" id="VjR-00-ucZ"/>
                <outlet property="view" destination="iN0-l3-epB" id="UWm-h3-w5w"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="sKy-LJ-zCf">
                    <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
                </activityIndicatorView>
                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x0h-61-CIq">
                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                </scrollView>
            </subviews>
            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <constraints>
                <constraint firstItem="sKy-LJ-zCf" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="GwL-uo-sUz"/>
                <constraint firstItem="sKy-LJ-zCf" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="N89-9L-Fdz"/>
                <constraint firstItem="x0h-61-CIq" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="YIO-9e-eEh"/>
                <constraint firstItem="x0h-61-CIq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="iao-Un-8M8"/>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="x0h-61-CIq" secondAttribute="trailing" id="tRx-qu-RQo"/>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="x0h-61-CIq" secondAttribute="bottom" id="yRg-ye-B86"/>
            </constraints>
            <point key="canvasLocation" x="139" y="72"/>
        </view>
        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" id="4jU-kr-oFd">
            <rect key="frame" x="0.0" y="0.0" width="414" height="898"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Authorization" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qVU-U6-ned">
                    <rect key="frame" x="20" y="52" width="374" height="100"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="100" id="h3N-FY-qX2"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UzS-Wq-sfg">
                    <rect key="frame" x="20" y="162" width="374" height="75"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="75" id="0ik-kS-ffe"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                    <textInputTraits key="textInputTraits" textContentType="username"/>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zzG-wK-UrB">
                    <rect key="frame" x="20" y="247" width="374" height="75"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="75" id="GjL-io-3Q4"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                    <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                </textField>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D2z-MU-TQx">
                    <rect key="frame" x="20" y="332" width="374" height="75"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="75" id="QdM-Xk-3wa"/>
                    </constraints>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="filled" title="Sign In">
                        <fontDescription key="titleFontDescription" type="system" pointSize="25"/>
                        <color key="baseBackgroundColor" systemColor="systemIndigoColor"/>
                    </buttonConfiguration>
                </button>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQA-VN-R6u">
                    <rect key="frame" x="20" y="417" width="374" height="20.5"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ejr-UO-V1H">
                    <rect key="frame" x="20" y="447.5" width="374" height="408.5"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" title="Sign Up">
                        <fontDescription key="titleFontDescription" type="system" pointSize="25"/>
                        <color key="baseForegroundColor" systemColor="systemIndigoColor"/>
                    </buttonConfiguration>
                </button>
            </subviews>
            <viewLayoutGuide key="safeArea" id="CsU-QX-E44"/>
            <edgeInsets key="layoutMargins" top="8" left="20" bottom="8" right="20"/>
            <point key="canvasLocation" x="853.62318840579712" y="71.651785714285708"/>
        </stackView>
    </objects>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemIndigoColor">
            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
