...
                    case 1:
                        self.view.showAlert("Success", "Review successfully add") {[weak self] _ in
                            guard let self = self else { return }
                            self.view.close()
                        }
                    default:
                        self.view.showAlert("Error", value.errorMessage) {[weak self] _ in
                            guard let self = self else { return }
                            self.view.close()
                        }
                    }
                }
            }
...
